# securepipe-llm-gateway

./: requirements-dev.txt
app/: security_engine.py
cpp/: CMakeLists.txt  __init__.py  setup.py
cpp/cmake/: FindONNXRuntime.cmake  FindPoppler.cmake
cpp/mlInterface/: CMakeLists.txt
docker/dev/: Dockerfile  build_docker.sh  docker-compose.yml  run_docker.sh
docs/: Hugging Face Security Gateway - Technical Specification.html
